# ParallelTasks

./: .gitignore  README.md
SetCompression/: CMakeLists.txt  README.md  compressed_data.cpp  compressed_data.hpp  data_format.hpp  dense_data.cpp  dense_data.hpp  main.cpp  sparse_data.cpp  sparse_data.hpp
UniqueValues/: CMakeLists.txt  README.md  cpp_cuda_kaggle.ipynb  main.cpp  main.cu  unique_finder.cu  unique_finder.cuh
UniqueValues/old/: CMakeLists.txt  README.md  main.cpp  run.sh
VectorCompression/: CMakeLists.txt  README.md  bitset_data.cpp  bitset_data.hpp  compressed_data.cpp  huffman_data.cpp  huffman_data.hpp  main.cpp  run.sh
